# mimosa-pudica

./: .gitignore  README.md  pyproject.toml
mimosa/: __init__.py  cli.py  config.py  db.py  models.py
mimosa/analyzers/: __init__.py  functions.py  ranking.py  staleness.py
mimosa/git/: __init__.py  annotate.py
mimosa/parsers/: base.py  claude_code.py  cursor.py  opencode.py
