[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimosa"
version = "0.1.0"
description = "Track which files coding agents reference most, with staleness detection and git integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-rust>=0.23",
]

[project.scripts]
mimosa = "mimosa.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["mimosa"]

[tool.ruff]
line-length = 100
target-version = "py311"
